# iivanovw7-dev

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.cjs  .stylelintrc.cjs  Cargo.toml  Dockerfile  Makefile.toml  README.md  config.toml  esbuild.config.css.mjs  package.json  pnpm-lock.yaml  postcss.config.js  recompose.sh  tailwind.config.cjs
src/: config.rs  main.rs  server.rs  utils.rs
src/handlers/: alpha.rs  alpha_upload.rs  home.rs  mod.rs
styles/: main.css  main.scss
styles/_abstracts/: _a11y.scss  _convert.scss  _index.scss  _layout.scss  _media.scss  _position.scss  _sizer.scss  _spacing.scss  _typography.scss  _variables.scss  _z-index.scss
styles/_internal/: _utils.scss
styles/_themes/: _index.scss  _palette.scss  _theme.scss
styles/_vendors/: _normalize.scss  _reset.scss
styles/base/: base.css  base.scss  index.scss  keyframes.css  keyframes.scss
styles/components/: navbar.scss
styles/components/home/: jobs.scss
styles/elements/: icon-button.scss  icon-link.scss  theme-switch.scss
styles/modules/: alpha.css  cards.css  footer.css  jobs.css  navbar.css
styles/pages/: alpha.scss  home.scss
templates/components/: contacts-card.html  footer.html  navbar.html  skills-card.html
templates/components/alpha/: alpha-error.html  alpha-report.html  alpha.html
templates/components/cards/: contacts.html  hello.html  jobs.html  skills.html
templates/components/home/: jobs.html
templates/elements/: link-icon.html  theme-switch.html
templates/layouts/: base.html
templates/pages/: alpha.html  home.html
