[package]
name = "iivanovw7-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = { version = "0.7.4", features = ["multipart"] }
cargo-watch = "8.5.2"
dotenv = "0.15.0"
envy = "0.4.2"
http = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
struct_iterable = "0.1.1"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
